--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,13 +1,97 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+    color: inherit;   
+}
+
 html{
     width: 100%;
     height: 100%;
+    font-size: 62.5%;
+
 }
 body{
-    font-size: 62.5%;
+    background-color: #fbfbfb;
+    font-family: Raleway, sans-serif;
 }
-@import '../app/styles/notfound.scss'
+.container{
+    padding: 4rem 12rem;
+}
+h2{
+    color: #333;
+    font-size: 4.4rem;
+}
+h2:hover{
+    color: #c5a179;
+}
+.center{
+    text-align: center;
+    cursor: pointer
+}
+.post-card{
+    margin-bottom: 4rem;
+}
+h5{
+    font-size: 1.4rem;
+    padding: 4px 9px 5px 9px ;
+    border-radius: 2px;
+    color: #fff;
+    font-weight: 300;
+    width: fit-content;
+    margin: 0 auto;
+    &.category{
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        background: #333;
+    }
+    &:hover{
+    color: #c5a179;
+    }
+}
+p{
+    font-size: 1.7rem;
+    line-height: 200%;
+    color: #333333;
+    word-spacing: 1px;
+    font-weight: 400;
+    font-family: Poppins;
+    &.content{
+        text-align: left;
+        padding: 2.4rem 8rem;
+    }
+}
+.wrap{
+    box-shadow: 0 0 6px 6px rgba(195, 195, 195, .12);
+    padding: 4rem 0;
+    background-color: white;
+    &.heading{
+        margin: 0 8rem;
+    }
+}
+@media screen and (max-width:900px) {
+    .container{
+        padding: 4rem;
+    }
+    p{
+        font-size: 1.5rem;
+        &.content{
+            padding: 2rem 3rem;
+        }
+    }
+    .wrap{
+        &.heading{
+            margin: 0 3rem;
+        }
+    }
+}
+
+@import '../app/styles/notfound.scss';
+@import '../app/styles/page.scss';
+@import '../app/styles/preview.scss';
+
