--- a/app/globals.scss
+++ b/app/globals.scss
@@ -26,6 +26,7 @@ body{
 h2{
     color: #333;
     font-size: 4.4rem;
+    text-transform: capitalize;
 }
 h2:hover{
     color: #c5a179;
@@ -77,6 +78,9 @@ p{
 @media screen and (max-width:900px) {
     .container{
         padding: 4rem;
+    }
+    h2{
+        font-size: 3.6rem;
     }
     p{
         font-size: 1.5rem;
