--- a/app/styles/preview.scss
+++ b/app/styles/preview.scss
@@ -38,19 +38,14 @@
             padding: 0 2.5rem 0 6rem;
             border-radius: 0 5px 5px 0;
         }
-        &.post_author{
-            padding: 0 6rem 0 2.5rem;
-            border-radius: 5px 0 0 5px;
-            &:hover{
-            color: #c5a179;
-            }
-        }
     }
     .show-more{
         letter-spacing: 1px;
         font-size: 1.8rem;
         color: #222 ;
         font-weight: bold;
+        padding-right: 12rem;
+        text-decoration: underline;
         &:hover{
             color: #c5a179;
         }
@@ -67,6 +62,43 @@
             &.post_author{
                 border-radius: 5px;
             }
+        }
+        .show-more{
+            justify-content: center;
+            text-align: center;
+            padding-right: 0;
+            font-size: 1.6rem;
+        }
+    }
+}
+
+.category-select{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2rem 0;
+    max-width: 100vw;
+    overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
+    gap: 2rem;
+    &::-webkit-scrollbar {
+        display: none;
+      }
+    div{
+        background-color: white;
+        padding:1rem 2.4rem;
+        width: max-content;
+        box-shadow: 0 0 6px 6px rgba(195, 195, 195, .12);
+        border: 1px solid black;
+        cursor: pointer;
+        border-radius: 3rem;
+        transition: all 300ms ease;
+        text-align: center;
+        font-size: 1.7rem;
+        &:hover{
+            background-color: #333;
+                color: white;
         }
     }
 }
