--- a/app/globals.scss
+++ b/app/globals.scss
@@ -55,6 +55,12 @@ h5{
     color: #c5a179;
     }
 }
+button{
+    text-decoration: none;
+    outline: none;
+    border: inherit;
+    background: inherit;
+}
 p{
     font-size: 1.7rem;
     line-height: 200%;
@@ -94,6 +100,13 @@ p{
         }
     }
 }
+*a, button {
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+ }
 
 @import '../app/styles/notfound.scss';
 @import '../app/styles/page.scss';
