--- a/app/styles/preview.scss
+++ b/app/styles/preview.scss
@@ -85,7 +85,7 @@
     &::-webkit-scrollbar {
         display: none;
       }
-    div{
+    button{
         background-color: white;
         padding:1rem 2.4rem;
         width: max-content;
@@ -99,6 +99,15 @@
         &:hover{
             background-color: #333;
                 color: white;
+        }
+    }
+}
+@media screen and (max-width:750px) {
+    .category-select{
+        gap: 1.4rem;
+        button{
+            padding:.8rem 2rem;
+            font-size: 1.6rem;
         }
     }
 }
