--- a/app/globals.scss
+++ b/app/globals.scss
@@ -4,6 +4,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 a{
     text-decoration: none;
@@ -101,15 +106,11 @@ p{
         }
     }
 }
-*a, button {
-    -moz-user-select: -moz-none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
- }
+
 
 @import '../app/styles/notfound.scss';
 @import '../app/styles/page.scss';
 @import '../app/styles/preview.scss';
+@import '../app/styles/navbar.scss';
+@import '../app/styles/buttons.scss';
 
