comments section added

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -109,7 +109,7 @@ p{
 
 
 @import '../app/styles/notfound.scss';
-@import '../app/styles/page.scss';
+@import '../app/styles/comments.scss';
 @import '../app/styles/preview.scss';
 @import '../app/styles/navbar.scss';
 @import '../app/styles/buttons.scss';
