--- a/app/globals.scss
+++ b/app/globals.scss
@@ -86,6 +86,67 @@ p{
         margin: 0 8rem;
     }
 }
+.loading{
+    display: grid;
+    place-items: center;
+    height: 100%;
+    width: 100vw;
+    margin-top: 20vh;
+    position: relative;
+    p{
+        margin-top: 8rem;
+    }
+    span{
+        display: block;
+        background-color: black;
+        width: 2rem;
+        height: 2rem;
+        border-radius: 50%;
+        position: absolute;
+        &:first-child{
+            animation-name: blackanim;
+            animation-duration: 3s;
+            animation-iteration-count: infinite;
+            animation-direction: alternate;
+        }
+        &:nth-child(2){
+            background-color: #c5a179;
+            animation-name: goldanim;
+            animation-duration: 3s;
+            animation-iteration-count: infinite;
+            animation-direction: alternate;
+        }
+    }
+}
+@keyframes blackanim {
+    0%{
+        width: 2rem;
+        height: 2rem; 
+    }
+    50%{
+        width: 5rem;
+        height: 5rem;
+        border-radius: 5px;
+    }
+    100%{
+        width: 4rem;
+        height: 4rem;
+    }
+}
+@keyframes goldanim {
+    0%{
+        width: 5rem;
+        height: 5rem; 
+    }
+    50%{
+        width: 2rem;
+        height: 2rem;
+    }
+    100%{
+        width: 3rem;
+        height: 3rem;
+    }
+}
 @media screen and (max-width:900px) {
     .container{
         padding: 4rem 2rem;
