--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -7,6 +7,11 @@
     padding: 2rem 8rem;
     font-size: 1.6rem;
     align-items: center;
+    .search{
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid white;
+    }
     #search{
         width: 50vw;
         padding: 1rem 2rem;
@@ -14,10 +19,27 @@
         background-color: #333;
         outline: none;
         border: none;
-        border-bottom: 1px solid white;
         color: white;
         &::placeholder{
             color: rgb(228, 227, 227);
+        }
+    }
+}
+@media screen and (max-width:900px) {
+    .navbar{
+        padding: 1.6rem;
+        font-size: 1.4rem;
+        .search{
+            svg{
+                width: 2rem;
+                height: 2rem;
+            }
+        }
+        #search{
+            width: 100%;
+            max-width: 45vw;
+            padding: 1rem;
+            font-size: 1.4rem;
         }
     }
 }
