--- a/app/styles/preview.scss
+++ b/app/styles/preview.scss
@@ -51,6 +51,10 @@
         }
     }
 }
+.no-list{
+    font-size: 1.6rem;
+    padding: 2rem;
+}
 @media screen and (max-width:750px) {
     .post-info{
         display: block;
