--- a/app/globals.scss
+++ b/app/globals.scss
@@ -168,6 +168,11 @@ p{
     }
 }
 
+@media screen and (min-width:1800px) {
+    .container{
+        padding: 4rem 20vw;
+    }
+}
 
 @import '../app/styles/notfound.scss';
 @import '../app/styles/comments.scss';
