--- a/app/globals.scss
+++ b/app/globals.scss
@@ -118,6 +118,32 @@ p{
         }
     }
 }
+.loading-spin{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    position: fixed;
+    opacity: 0.8;
+    z-index: 8;
+  }
+.spinner {
+    -webkit-animation: spinner 1.5s linear infinite;
+    animation: spinner 1.5s linear infinite;
+    border: 5px solid #bab9b9;
+    border-radius: 50%;
+    border-top: 10px solid black;
+    height: 50px;
+    width: 50px;
+}
+@keyframes spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 @keyframes blackanim {
     0%{
         width: 2rem;
@@ -179,4 +205,3 @@ p{
 @import '../app/styles/preview.scss';
 @import '../app/styles/navbar.scss';
 @import '../app/styles/buttons.scss';
-
