--- a/app/globals.scss
+++ b/app/globals.scss
@@ -43,6 +43,11 @@ h2:hover{
 .post-card{
     margin-bottom: 4rem;
 }
+h4{
+    font-size: 1.7rem;
+    font-weight: 400;
+    margin-top: 2rem;
+}
 h5{
     font-size: 1.4rem;
     padding: 4px 9px 5px 9px ;
