--- a/app/styles/comments.scss
+++ b/app/styles/comments.scss
@@ -27,5 +27,15 @@ form{
         }
     }
     
-    
+    button{
+        font-size: 2rem;
+        background-color: #333;
+        color: white;
+        padding: 1.2rem 2rem;
+        margin: 1rem 0;
+        &:hover{
+            color: #c5a179;
+            cursor: pointer;
+        }
+    }
 }
