--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+$gold:#c5a179;
 *{
     margin: 0;
     padding: 0;
@@ -216,4 +217,6 @@ p{
 @import '../app/styles/navbar.scss';
 @import '../app/styles/buttons.scss';
 @import '../app/styles/modals.scss';
+@import '../app/styles/headcomments.scss';
+
 
