--- a/app/globals.scss
+++ b/app/globals.scss
@@ -83,7 +83,7 @@ p{
     color: #333333;
     word-spacing: 1px;
     font-weight: 400;
-    font-family: Poppins;
+    font-family: 'open Sans';
     &.content{
         text-align: left;
         padding: 2.4rem 8rem;
