--- a/app/styles/modals.scss
+++ b/app/styles/modals.scss
@@ -8,6 +8,7 @@
     background-color: white;
     border-radius: 2rem 8px 0 1rem;
     transition: all 300ms ease;
+    max-width: 32rem;
     &.success{
         background-color: rgb(246, 250, 246);
         border: 1.5px solid green;
