--- a/app/globals.scss
+++ b/app/globals.scss
@@ -33,6 +33,7 @@ h2{
     color: #333;
     font-size: 4.4rem;
     text-transform: capitalize;
+    font-family: 'Oswald';
 }
 h2:hover{
     color: #c5a179;
@@ -87,6 +88,35 @@ p{
     &.content{
         text-align: left;
         padding: 2.4rem 8rem;
+    }
+}
+.commentSection{
+    &.replying{
+        width: 100%;
+        height: 100%;
+        padding: 2rem 20vw;
+        .section_head{
+            display: flex;
+            padding: .2rem;
+            button{
+                margin-left: auto;
+                background-color: black;
+                color: white;
+                padding: 0 1rem;
+                font-size: 1.8rem;
+            }
+        }
+        background-color: white;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+}
+@media screen and (max-width:500px) {
+    .commentSection{
+        &.replying{
+            padding: 2rem;
+        }
     }
 }
 .wrap{
