--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     justify-content: space-between;
-    background-color: #333;
+    background-color: #222222;
     color: white;
     padding: 2rem 8rem;
     font-size: 1.6rem;
@@ -16,7 +16,7 @@
         width: 50vw;
         padding: 1rem 2rem;
         font-size: 1.6rem;
-        background-color: #333;
+        background-color: transparent;
         outline: none;
         border: none;
         color: white;
