--- a/app/styles/notfound.scss
+++ b/app/styles/notfound.scss
@@ -1,10 +1,10 @@
 .not-found{
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
     font-size: 1rem;
-    height: 100vh;
-    width: 100vw;
+    width: 100%;
+    height: 100%;
     padding: 5rem 2rem;
 }
 .not-found h1{
@@ -13,17 +13,21 @@
 }
 .not-found h5{
     font-size: 1.2rem;
+    color: black;
 }
 .not-found p{
-    margin: 1rem 0;
-    color: white;
+    margin: 5rem 0 0;
+    color: black;
 }
 .not-found button{
-    background-color: rgba(255,255,255,0.95);
-    color: black;
+    background-color:black;
+    color:  rgba(255,255,255,0.95);
     font-size: 1.8rem;
     padding: .6rem 2rem;
     outline: none;
     border: none;
-    margin: 3rem;
+    margin: 3rem auto;
+    &:hover{
+        color: #c5a179;
+    }
 }
