--- a/app/styles/comments.scss
+++ b/app/styles/comments.scss
@@ -1,8 +1,9 @@
 .comment-section{
-    margin: 2rem 0;
+    margin: 3rem 0;
     
 }
 form{
+    margin-top: 1rem;
     input, textarea{
         background-color: inherit;
         border: none;
