--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -4,9 +4,16 @@
     justify-content: space-between;
     background-color: #222222;
     color: white;
-    padding: 2rem 8rem;
+    padding: 2rem 6rem;
     font-size: 1.6rem;
     align-items: center;
+    .logo{
+        font-family: 'Oswald';
+        font-size: 2.4rem;
+        span{
+            color: #c5a179;
+        }
+    }
     .search{
         display: flex;
         align-items: center;
@@ -24,11 +31,22 @@
             color: rgb(228, 227, 227);
         }
     }
+    .about-me{
+        text-transform: uppercase;
+        font-family: 'Oswald';
+        &:hover{
+            color: #c5a179;
+        }
+    }
 }
 @media screen and (max-width:900px) {
     .navbar{
         padding: 1.6rem;
         font-size: 1.4rem;
+        .logo{
+        font-size: 2rem;
+
+        }
         .search{
             svg{
                 width: 2rem;
