font added locally

--- a/app/styles/preview.scss
+++ b/app/styles/preview.scss
@@ -6,6 +6,9 @@
     font-family: Oswald, sans-serif;
     font-weight: 400;
     text-transform: uppercase;
+    p.content{
+        font-family: 'open sans';
+    }
     span{
         display: block;
         width: 5px;
