--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,5 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+    font-family: 'Oswald';
+    src: url('../app/fonts/Oswald/static/Oswald-Regular.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'open sans';
+    src: url('../app/fonts/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Raleway';
+    src: url('../app/fonts/Raleway/static/Raleway-Regular.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Poppins';
+    src: url('../app/fonts/Poppins/Poppins-Regular.ttf') format('truetype');
+  }
 $gold:#c5a179;
 *{
     margin: 0;
