--- a/app/styles/comments.scss
+++ b/app/styles/comments.scss
@@ -25,6 +25,9 @@ form{
         &#savebtn{
             display: flex;
         }
+        .optional{
+            color: rgba(0,0,0,0.7);
+        }
     }
     
     button{
