--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,6 +15,11 @@
     src: url('../app/fonts/Poppins/Poppins-Regular.ttf') format('truetype');
   }
 $gold:#c5a179;
+$primary-black:#333333;
+$bg:#fbfbfb;
+$white: #fff;
+$black:black;
+$shadow-black:rgba(195, 195, 195, .12);
 *{
     margin: 0;
     padding: 0;
@@ -37,7 +42,7 @@ html{
 
 }
 body{
-    background-color: #fbfbfb;
+    background-color: $bg;
     font-family: Raleway, sans-serif;
 }
 .container{
@@ -47,13 +52,13 @@ body{
     min-height: 85vh;
 }
 h2{
-    color: #333;
+    color: $primary-black;
     font-size: 4.4rem;
     text-transform: capitalize;
     font-family: 'Oswald';
 }
 h2:hover{
-    color: #c5a179;
+    color: $gold;
 }
 .center{
     text-align: center;
@@ -74,17 +79,17 @@ h5{
     font-size: 1.4rem;
     padding: 4px 9px 5px 9px ;
     border-radius: 2px;
-    color: #fff;
+    color: $white;
     font-weight: 300;
     width: fit-content;
     margin: 0 auto;
     &.category{
         text-transform: uppercase;
         letter-spacing: 1px;
-        background: #333;
+        background: $primary-black;
     }
     &:hover{
-    color: #c5a179;
+    color: $gold;
     }
 }
 button{
@@ -98,7 +103,7 @@ button{
 p{
     font-size: 1.7rem;
     line-height: 200%;
-    color: #333333;
+    color: $primary-black;
     word-spacing: 1px;
     font-weight: 400;
     font-family: 'open Sans';
@@ -117,13 +122,13 @@ p{
             padding: .2rem;
             button{
                 margin-left: auto;
-                background-color: black;
-                color: white;
+                background-color: $black;
+                color: $white;
                 padding: 0 1rem;
                 font-size: 1.8rem;
             }
         }
-        background-color: white;
+        background-color: $white;
         position: fixed;
         top: 0;
         left: 0;
@@ -140,9 +145,9 @@ p{
     }
 }
 .wrap{
-    box-shadow: 0 0 6px 6px rgba(195, 195, 195, .12);
+    box-shadow: 0 0 6px 6px $shadow-black;
     padding: 4rem 0;
-    background-color: white;
+    background-color: $white;
     &.heading{
         margin: 0 8rem;
     }
@@ -159,7 +164,7 @@ p{
     }
     span{
         display: block;
-        background-color: black;
+        background-color: $black;
         width: 2rem;
         height: 2rem;
         border-radius: 50%;
@@ -171,7 +176,7 @@ p{
             animation-direction: alternate;
         }
         &:nth-child(2){
-            background-color: #c5a179;
+            background-color: $gold;
             animation-name: goldanim;
             animation-duration: 3s;
             animation-iteration-count: infinite;
@@ -192,18 +197,18 @@ p{
         gap: 1.4rem;
         text-align: center;
         .box{
-            box-shadow: 0 0 6px 6px rgba(195, 195, 195, .12);
+            box-shadow: 0 0 6px 6px $shadow-black;
             padding: 2rem 0;
-            background-color: white;
+            background-color: $white;
         }
         h5{
-            color: black;
+            color: $black;
             font-weight: 600;
             font-size: 1.8rem;
             font-family: 'Oswald';
             text-transform: capitalize;
             &:hover{
-                color: #c5a179;
+                color: $gold;
             }
         }
         p{
@@ -236,7 +241,7 @@ p{
     animation: spinner 1.5s linear infinite;
     border: 5px solid #bab9b9;
     border-radius: 50%;
-    border-top: 10px solid black;
+    border-top: 10px solid $black;
     height: 50px;
     width: 50px;
 }
