--- a/app/styles/about-me.scss
+++ b/app/styles/about-me.scss
@@ -7,7 +7,7 @@
         h2{
             margin-top: 2rem;
             &:hover{
-                color: #333;
+                color: $primary-black;
             }
         }
     }
