--- a/app/styles/buttons.scss
+++ b/app/styles/buttons.scss
@@ -1,22 +1,22 @@
 button{
     &.filter-btn{
-        background-color: white;
+        background-color: $white;
         padding:1rem 2.4rem;
         width: max-content;
-        box-shadow: 0 0 6px 6px rgba(195, 195, 195, .12);
-        border: 1px solid black;
+        box-shadow: 0 0 6px 6px $shadow-black;
+        border: 1px solid $black;
         cursor: pointer;
         border-radius: 3rem;
         transition: all 300ms ease;
         text-align: center;
         font-size: 1.7rem;
         &:hover{
-            background-color: #333;
-            color: white;
+            background-color: $primary-black;
+            color: $white;
         }
         &.active{
-            background-color: #333;
-            color: white;
+            background-color: $primary-black;
+            color: $white;
         }
     }
 }
