--- a/app/styles/modals.scss
+++ b/app/styles/modals.scss
@@ -5,7 +5,7 @@
     margin: 3rem;
     top: 0;
     right: 0;
-    background-color: white;
+    background-color: $white;
     border-radius: 2rem 8px 0 1rem;
     transition: all 300ms ease;
     max-width: 32rem;
