--- a/app/styles/notfound.scss
+++ b/app/styles/notfound.scss
@@ -1,6 +1,6 @@
 .not-found{
-    background-color: white;
-    color: black;
+    background-color: $white;
+    color: $black;
     text-align: center;
     font-size: 1rem;
     width: 100%;
@@ -13,14 +13,14 @@
 }
 .not-found h5{
     font-size: 1.2rem;
-    color: black;
+    color: $black;
 }
 .not-found p{
     margin: 5rem 0 0;
-    color: black;
+    color: $black;
 }
 .not-found button{
-    background-color:black;
+    background-color:$black;
     color:  rgba(255,255,255,0.95);
     font-size: 1.8rem;
     padding: .6rem 2rem;
@@ -28,6 +28,6 @@
     border: none;
     margin: 3rem auto;
     &:hover{
-        color: #c5a179;
+        color: $gold;
     }
 }
