--- a/app/styles/headcomments.scss
+++ b/app/styles/headcomments.scss
@@ -4,17 +4,7 @@
     h3{
         text-transform: capitalize;
     }
-    .initial{
-        width: 6rem;
-        height: 6rem;
-        color: $gold;
-        font-size: 5rem;
-        border-radius: 50%;
-        background-color: #f8f3ee;
-        display: grid;
-        place-items: center;
-        text-transform: capitalize;
-    }
+    
     p{
         font-size: 1.5rem;
         line-height: 170%;
@@ -41,7 +31,18 @@
 }
     .headcomments{
         display: flex;
-        gap: 2rem;    
+        gap: 2rem; 
+        .initial{
+            width: 6rem;
+            height: 6rem;
+            color: $gold;
+            font-size: 5rem;
+            border-radius: 50%;
+            background-color: #f8f3ee;
+            display: grid;
+            place-items: center;
+            text-transform: capitalize;
+        }   
     }
     .childComment{
         margin-left: 2rem;
@@ -61,8 +62,7 @@
             text-transform: capitalize;
         }
         .reply_to{
-            font-size: 1rem;
-            
+            font-size: 1rem;      
         } 
         h3{
             font-size: 2.4rem;
@@ -70,13 +70,25 @@
     }
 }
 @media screen and (max-width:500px) {
+   
+   .comments-sect{
     .headcomments{
         gap: 1rem;
+        width: max-contentg;
         .initial{
-            width: fit-content;
-            height: fit-content;
-            font-size: 5rem;
-            background-color: transparent;
+            width: 4rem;
+            height: 4rem;
+            font-size: 3rem;
         }
     }
+    .childComment{
+        margin-left: 1.8rem;
+        gap: 1.4rem;  
+        .initial{
+            width: 4rem;
+            height: 4rem;
+            font-size: 3rem;
+        }
+    }
+   }
 }
