comments link fixed

--- a/app/styles/headcomments.scss
+++ b/app/styles/headcomments.scss
@@ -74,7 +74,7 @@
    .comments-sect{
     .headcomments{
         gap: 1rem;
-        width: max-contentg;
+        width: max-content;
         .initial{
             width: 4rem;
             height: 4rem;
